Tweak page to not show me as creator

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ Every keypress will trigger a rerender.</p>
     </div>
     <footer>
       <div class="owner">
-      <p><a href="https://github.com/aidanhs" class="avatar"><img src="https://0.gravatar.com/avatar/b118dc1a567c055976442f8f38576967?d=https%3A%2F%2Fidenticons.github.com%2Fd1c106a8a91796e982549f408391cda6.png&amp;s=30" width="48" height="48"/></a> <a href="https://github.com/aidanhs">aidanhs</a> maintains <a href="https://github.com/aidanhs/emsnudown">Emsnudown</a></p>
+      <p><!--<a href="https://github.com/aidanhs" class="avatar"><img src="https://0.gravatar.com/avatar/b118dc1a567c055976442f8f38576967?d=https%3A%2F%2Fidenticons.github.com%2Fd1c106a8a91796e982549f408391cda6.png&amp;s=30" width="48" height="48"/></a> <a href="https://github.com/aidanhs">aidanhs</a> maintains <a href="https://github.com/aidanhs/emsnudown">Emsnudown</a>--></p>
 
 
       </div>
