Insert locations to get more info on markdown

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
         <article class="markdown-body">
           <h3>
-<a name="welcome-to-the-emsnudown-test-page" class="anchor" href="#welcome-to-the-emsnudown-test-page"><span class="octicon octicon-link"></span></a>Welcome to the EmSnudown Test Page</h3>
+<a name="welcome-to-the-emsnudown-test-page" class="anchor" href="#welcome-to-the-emsnudown-test-page"><span class="octicon octicon-link"></span></a>EmSnudown Test Page</h3>
 
 <p>This is a simple test page for seeing the output of EmSnudown and SnuOwnd.
 Every keypress will trigger a rerender.</p>
@@ -46,7 +46,7 @@ Every keypress will trigger a rerender.</p>
     </div>
     <footer>
       <div class="owner">
-      <p><!--<a href="https://github.com/aidanhs" class="avatar"><img src="https://0.gravatar.com/avatar/b118dc1a567c055976442f8f38576967?d=https%3A%2F%2Fidenticons.github.com%2Fd1c106a8a91796e982549f408391cda6.png&amp;s=30" width="48" height="48"/></a> <a href="https://github.com/aidanhs">aidanhs</a> maintains <a href="https://github.com/aidanhs/emsnudown">Emsnudown</a>--></p>
+      <p>reddit markdown info: <a href="http://www.reddit.com/wiki/commenting">official documentation</a>, <a href="http://www.reddit.com/r/reddit.com/comments/6ewgt/reddit_markdown_primer_or_how_do_you_do_all_that/">user created documentaion</a><!--<a href="https://github.com/aidanhs" class="avatar"><img src="https://0.gravatar.com/avatar/b118dc1a567c055976442f8f38576967?d=https%3A%2F%2Fidenticons.github.com%2Fd1c106a8a91796e982549f408391cda6.png&amp;s=30" width="48" height="48"/></a> <a href="https://github.com/aidanhs">aidanhs</a> maintains <a href="https://github.com/aidanhs/emsnudown">Emsnudown</a>--></p>
 
 
       </div>
