Capitalisation and indent tweaks

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <script type="text/javascript" src="lib/emsd.opt.js"></script>
   <script type="text/javascript" src="lib/snuownd.uglified.js"></script>
 
-  <title>Emsnudown</title>
+  <title>EmSnudown</title>
   <meta name="description" content="Snudown for the web via emscripten">
 
   <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -23,7 +23,7 @@
 
   <div class="wrapper">
     <header>
-      <h1 class="title">Emsnudown</h1>
+      <h1 class="title">EmSnudown</h1>
     </header>
     <div id="container">
       <p class="tagline">Snudown for the web via emscripten</p>
@@ -136,9 +136,7 @@ gap ln
     </div>
     <footer>
       <div class="owner">
-      <p>reddit markdown info: <a href="http://www.reddit.com/wiki/commenting">official documentation</a>, <a href="http://www.reddit.com/r/reddit.com/comments/6ewgt/reddit_markdown_primer_or_how_do_you_do_all_that/">user created documentaion</a><!--<a href="https://github.com/aidanhs" class="avatar"><img src="https://0.gravatar.com/avatar/b118dc1a567c055976442f8f38576967?d=https%3A%2F%2Fidenticons.github.com%2Fd1c106a8a91796e982549f408391cda6.png&amp;s=30" width="48" height="48"/></a> <a href="https://github.com/aidanhs">aidanhs</a> maintains <a href="https://github.com/aidanhs/emsnudown">Emsnudown</a>--></p>
-
-
+        <p>reddit markdown info: <a href="http://www.reddit.com/wiki/commenting">official documentation</a>, <a href="http://www.reddit.com/r/reddit.com/comments/6ewgt/reddit_markdown_primer_or_how_do_you_do_all_that/">user created documentaion</a><!--<a href="https://github.com/aidanhs" class="avatar"><img src="https://0.gravatar.com/avatar/b118dc1a567c055976442f8f38576967?d=https%3A%2F%2Fidenticons.github.com%2Fd1c106a8a91796e982549f408391cda6.png&amp;s=30" width="48" height="48"/></a> <a href="https://github.com/aidanhs">aidanhs</a> maintains <a href="https://github.com/aidanhs/emsnudown">Emsnudown</a>--></p>
       </div>
       <div class="creds">
         <small>This page generated using <a href="https://pages.github.com/">GitHub Pages</a><br/>theme by <a href="https://twitter.com/jonrohan/">Jon Rohan</a></small>
