--- a/index.html
+++ b/index.html
@@ -88,11 +88,10 @@
           </style>
 
           <div id="demoarea">
-            <textarea style="width: 100%; height: 170px;" id="md_input">*A* **more** __com_plex__ `comment`
+            <textarea style="width: 100%; height: 170px;" id="md_input">*A* **more** __com_plex__ `comment` [Test](#test)
 
 /r/all-minus-something  
-[Test](#test)  
-emsnudown is correct for both the above
+emsnudown is correct for the above
 
  - abc
  - bcd
